--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.title>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
     "name = \"art vandelay\"\n",
-    "\n"
+    "name.title\n"
    ]
   },
   {
