--- a/index.ipynb
+++ b/index.ipynb
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.title>"
+       "'art vandelay'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
     "name = \"art vandelay\"\n",
-    "name.title\n"
+    "name\n"
    ]
   },
   {
