Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
    ],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "upper(\"ceo\")"
+    "name\n",
+    "name.upper(\"ceo\")"
    ]
   },
   {
