--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n",
+    "=\"Ceo\" # 'CEO'\n",
     "name= \"ceo\"\n",
     "name.upper()"
    ]
