Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +187,13 @@
        "'CEO'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "=\"Ceo\" # 'CEO'\n",
-    "name= \"ceo\"\n",
+    "name=\"Ceo\" # 'CEO'\n",
     "name.upper()"
    ]
   },
