--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(.com) # False\n"
+    "email = \"art.vandelay@vandelay.co\" \n",
+    "# False\n"
    ]
   },
   {
